[gd_scene load_steps=6 format=2]

[ext_resource path="res://levels/common/scripts/level.gd" type="Script" id=1]
[ext_resource path="res://levels/common/scripts/sfx.gd" type="Script" id=2]
[ext_resource path="res://levels/common/scripts/player-score.gd" type="Script" id=3]
[ext_resource path="res://common_assets/prefabs/countdown/scenes/Countdown.tscn" type="PackedScene" id=4]
[ext_resource path="res://common_assets/prefabs/victory/scenes/Victory.tscn" type="PackedScene" id=5]

[node name="Level" type="Node" groups=[
"levels",
]]
script = ExtResource( 1 )
victory_music = "res://common_assets/music/bensound/bensound-hey.ogg"

[node name="SFX" type="AudioStreamPlayer" parent="."]
bus = "SFX"
script = ExtResource( 2 )

[node name="Background" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Debug" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="PongBallSpeed" type="Label" parent="Debug"]
margin_left = 10.0
margin_top = 10.0
margin_right = 50.0
margin_bottom = 24.0
text = "Pong Ball Speed"

[node name="PongBallPosition" type="Label" parent="Debug"]
margin_left = 10.0
margin_top = 30.0
margin_right = 141.0
margin_bottom = 44.0
text = "Ball Current Position"

[node name="BackDisplays" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0

[node name="Player1Score" type="Label" parent="BackDisplays"]
margin_left = 550.0
margin_top = 70.0
margin_right = 590.0
margin_bottom = 84.0
text = "0"
script = ExtResource( 3 )

[node name="Player2Score" type="Label" parent="BackDisplays"]
margin_left = 720.0
margin_top = 70.0
margin_right = 760.0
margin_bottom = 84.0
text = "0"
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 640, 360 )
current = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false

[node name="Walls" type="Node2D" parent="."]

[node name="Goals" type="Node2D" parent="."]

[node name="StartingLocations" type="Node2D" parent="."]

[node name="LeftSide" type="Position2D" parent="StartingLocations"]
position = Vector2( 50, 360 )

[node name="RightSide" type="Position2D" parent="StartingLocations"]
position = Vector2( 1230, 360 )

[node name="Ball" type="Position2D" parent="StartingLocations"]
position = Vector2( 640, 360 )

[node name="PaddleContainer" type="Node2D" parent="."]

[node name="BallContainer" type="Node2D" parent="."]

[node name="ForeDisplays" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0

[node name="Countdown" parent="ForeDisplays" instance=ExtResource( 4 )]
visible = false

[node name="Victory" parent="ForeDisplays" instance=ExtResource( 5 )]
visible = false

[connection signal="animations_completed" from="ForeDisplays/Victory" to="." method="_on_Victory_animations_completed"]
